<resources>
    //Regist
    <string name="login">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="nama_user">Nama User</string>
    <string name="email">Email</string>
    <string name="telepon">Nomor telepon</string>
    <string name="kata_sandi">Kata Sandi</string>

    //nav
    <string name="string_nav_home">Beranda</string>
    <string name="string_nav_order">Pesanan</string>
    <string name="string_nav_account">Akun</string>

    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="login_form">Login Form</string>
    <string name="keluar">Keluar</string>
    //Account
    <string name="accout_nama">Nama kamu</string>
    <string name="accout_nomor">08xx-xxxx-1234</string>
    <string name="accout_email">nama@email.com</string>
    <string name="accout_tgl_tempat">lokasi</string>
    <string name="accout_tgl_hh">01</string>
    <string name="accout_tgl_mm">April</string>
    <string name="accout_tgl_yyyy">2020</string>

    //Admin
    <string name="dashboard">Dashboard</string>
    <string name="card1">Akun</string>
    <string name="card2">Feedback</string>
    <string name="card3">Order</string>
    <string name="card4">Promo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_account_profile">Account_profile</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>


    <string name="app_name">wafil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyCkM8zFaWXcvCbRjYHD2_f2-ZSxmkckMZA</string>

    <!-- print punya, jang kore!   -->
    <string name="open_place_picker">Pilih Tempat Antar</string>

    <string name="tanggal">Tanggal</string>

    <string name="kode_transaksi">Kode Transaksi</string>

    <string name="title_beranda">Beranda</string>
    <string name="title_pesanan">Pesanan</string>
    <string name="title_akun">Akun</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_no_telepon">No_Telepon</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prefLoginState">loginState</string>
    <string name="permission_dialog">Accessing Location Permissions required</string>
    <string name="go_to_permissions_settings">Go to App settings and enable permissions</string>
    <string name="title_activity_beranda_provider">beranda_provider</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main_provider">MainActivityProvider</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="date_of_birth">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="height">Tinggi</string>
    <string name="activity_level">Level Keaktifan</string>
    <string name="weight">Berat</string>
    <string name="target_weight">Target Berat</string>
    <string name="mesurment">Pengukuran</string>
    <string name="cm">cm</string>
    <string name="feet_inches">feet and inches</string>
    <string name="kg">kg</string>
    <string name="pound">pound</string>


    <string-array name="array_mesurments">
        <item>Metrik</item>
        <item>Imperial</item>
    </string-array>

    <string name="metric">Metrik</string>
    <string name="imperial">Imperial</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string-array name="array_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="blank"> </string>


    <string-array name="array_activity_levels">
        <item>Tidak Aktif</item>
        <item>Aktivitas Ringan</item>
        <item>Aktivitas Sedang</item>
        <item>Aktivitas Berat</item>
        <item>Aktivitas Sangat Berat</item>
    </string-array>

    <string name="i_want_to">Saya ingin</string>
    <string name="i_want">I want</string>
    <string name="sign_up">Daftar</string>

    <string name="weekly_goal">Weekly goal</string>


    <string-array name="array_weekly_goals">
        <item>menurunkan berat</item>
        <item>menaikan berat</item>
    </string-array>

    <string-array name="array_weekly_goals_kg">
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
    </string-array>


    <string name="kg_each_week">kg per minggu</string>
    <string name="pounds_each_week">pounds per minggu</string>

    <string name="lets_go">Lets go!</string>

    <string name="home">Beranda</string>
    <string name="profile">Profil</string>
    <string name="goal">Goal</string>
    <string name="categories">Kategori</string>
    <string name="food">Makanan</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="name">Name</string>
    <string name="parent">Parent</string>
    <string name="save">Save</string>
    <string name="are_you_sure_you_want_to_delete">Apakah yakin ingin menghapus?</string>
    <string name="cancel">Cancel</string>
    <string name="calories_table">Tabel kalori</string>
    <string name="energy">Kalori</string>
    <string name="proteins">Protein</string>
    <string name="carbs">Karbohidrat</string>
    <string name="fat">Lemak</string>
    <string name="per_hundred_gran">Per 100 gram</string>
    <string name="per_meal">Per porsi</string>
    <string name="manufactor">Jenis</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="general">General</string>
    <string name="serving">Serving</string>
    <string name="number">Jumlah</string>
    <string name="word">Satuan</string>
    <string name="barcode">Barcode</string>
    <string name="category">Kategori</string>
    <string name="main">Main</string>
    <string name="sub">Sub</string>
    <string name="current_status">Current status</string>
    <string name="target">Target</string>
    <string name="my_goal">My goal</string>
    <string name="status">Status</string>
    <string name="method">Metode</string>
    <string name="bmr">BMR</string>
    <string name="numbers">Numbers</string>
    <string name="diet">Diet</string>
    <string name="with_activity">With activity</string>
    <string name="with_activity_and_diet">With activity and diet</string>

    <string name="if_you_want_to_keep_your_weight">Jika anda ingin menjaga berat badan</string>
    <string name="if_you_want_to_loose_weight">Jika anda ingin menurunkan berat badan</string>
    <string name="if_you_want_to">If you want to</string>
    <string name="keep_your_weight">Keep your weight</string>
    <string name="loose_x_kg_week_with_out_exercising">Loose x kg each week with out exercising</string>
    <string name="without_activity">Without activity</string>
    <string name="advanced">Advanced</string>
    <string name="with_activity_">With activity</string>
    <string name="edit">Edit</string>

    <string name="password">Password</string>
    <string name="alias">Alias</string>
    <string name="activity">Activity</string>
    <string name="breakfast">Sarapan</string>
    <string name="lunch">Makan Siang</string>
    <string name="before_training">Sebelum olahraga</string>
    <string name="after_training">Sesudah olahraga</string>
    <string name="dinner">Makan Malam</string>
    <string name="snacks">Cemilan</string>
    <string name="supper">Tambahan</string>

    <string name="portion_size">Portion size</string>
    <string name="pcs">pcs</string>
    <string name="gram">gram</string>
    <string name="add_to_diary">Add to diary</string>
    <string name="unlink">Unlink</string>
    <string name="goal_with_activity">Kalori disarankan</string>
    <string name="sum">Sisa</string>
    <string name="remaining">Remaining</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="select_meal">Pilih makanan</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
