<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wafil.Wafil.bengkel.BengkelMainActivity">

    <ImageView
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:src="@drawable/logo2" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#FFFFFF"
        android:src="@drawable/logobengkel"
        android:layout_marginTop="130dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="250dp"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:id="@+id/password"
        android:layout_alignParentEnd="true"
        android:hint="@string/password"
        android:autofillHints="" />

    <Button
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnLogin" />


    <Button
        android:id="@+id/btnHelp"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:text="help?" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="60dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:text="sign up" />
</RelativeLayout>